--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ index.html<!DOCTYPE html>
 
 <head>
 	<meta charset="utf-8">
-	<title>Example Title</title>
+	<title>Testing the WEB page</title>
 	<meta name="author" content="Mike Regan">
 	<meta name="description" content="Example description">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,7 @@ index.html<!DOCTYPE html>
 	<main></main>
 	<footer></footer>
 	<script type="text/javascript" src=""></script>
+	<h1> Just some junk</h1>
 </body>
 
 </html>
